# nao-gm

./: .gitignore  README.md  howto-link-libs.txt  nao-environment-setup.txt  run-nao-environment.sh  todo-build.txt  vs2010-installation-guide.txt
crg/: greeting-loop.crg  naos-life.crg  sit-stiffness-off.crg  stand-greet-sit.crg
screenshots/: poly-capture-01.flv
worktree/.qi/: worktree.xml
worktree/funk/common/: BaseEntity.h  Debug.cpp  HandledObj.h  Hash.h  IniReader.h  Input.cpp  Input.h  Input.inl  PtrIncludes.h  ResourcePath.h  Singleton.h  Timer.cpp  Timer.h  Util.cpp  Util.h  WeakPtr.h  Window.cpp  Window.h
worktree/funk/gfx/: Cam2d.cpp  Cam2d.h  Cam3d.cpp  Cam3d.h  CamBase.cpp  CamBase.h  CamDemo.cpp  CamDemo.h  DrawPrimitives.cpp  DrawPrimitives.h  Fbo.cpp  Fbo.h  Font.cpp  Font.h  FragShader.cpp  FragShader.h  GLutil.h  Glutil.cpp  GpuTimer.cpp  GpuTimer.h  Ibo.cpp  Ibo.h  LineGraph.cpp  LineGraph.h  ObjLoader.cpp  ObjLoader.h  Particles2D.cpp  Particles2D.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TextureParams.h  Vbo.cpp  Vbo.h  VertexAttribute.cpp  (+3 more)
worktree/funk/gm/: gmBind.h  (+26 more)
worktree/hello/: CMakeLists.txt  main.cpp  qiproject.xml
worktree/hello-gm/: CMakeLists.txt  Core.cpp  Core.h  beat_detection.cpp  beat_detection.h  fft.cpp  fft.h  filters.cpp  filters.h  gmalproxy.cpp  gmalproxy.h  main.cpp  main.h  opencv_tests.cpp  opencv_tests.h  qiproject.xml  synthesizer.cpp  synthesizer.h  tests.cpp  vision.cpp  vision.h
worktree/hello-gm/common/gm/: Core.gm  Debug.gm  DrawManager.gm  Ease.gm  Fader.gm  Gfx.gm  Imgui.gm  Includes.gm  Particles2d.gm  PostProcessBloom.gm  ShaderBank.gm  ShaderProgram.gm  SoundBank.gm  SplashScreen.gm  SpriteAnimationBank.gm  SysUtil.gm  Test.gm  ThreadGroups.gm  Tools.gm  Tween.gm  TweenTimeline.gm  Util.gm
worktree/hello-gm/common/gm/particles/: KYOTO_appleExplode.gm  KYOTO_appleSlotRise.gm  KYOTO_aurora.gm  KYOTO_bokehScene3.gm  KYOTO_lanternExplode.gm  KYOTO_scene1Bokeh.gm  KYOTO_scene3Tree.gm  KYOTO_treeSeed.gm  STELLA_blood.gm  STELLA_camoParticles.gm  STELLA_chargerProjectile.gm  STELLA_crewSelectDropIcon.gm  STELLA_crewSelectLaunchSmoke.gm  STELLA_entityTakeDamage.gm  STELLA_explosion.gm  STELLA_fire.gm  STELLA_playerMoveBlock.gm  STELLA_playerShieldDisable.gm  STELLA_playerShootBeam.gm  STELLA_playerTakeDamage.gm  STELLA_slowShooterProjectile.gm  STELLA_smoke.gm  psychotropic_eye.gm  sun.gm
worktree/hello-gm/common/ini/: main.ini
worktree/hello-gm/common/shader/: bloomFinal.fp  bloomThreshold.fp  fboDefault.fp  fboDefault.vp  gaussianBlur.fp  particles2d.fp  particles2d.vp  particles2dTex.fp
worktree/hello-gm/scripts/: PianoSoundBank.gm  al.gm  audio_tests.gm  filters.gm  init.gm  opencv_tests.gm  status_display.gm
(+68 files in other folders)
